# dynamic_prm

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.txt  plots.ipynb
benches/: bench_main.rs
benches/benchmarks/: astar_benchmarks.rs  dprm_benchmarks.rs  mod.rs  prm_benchmark.rs
src/: astar.rs  dprm.rs  lib.rs  main.rs  prm.rs  server.rs
