[package]
name = "dynamic_prm"
version = "0.1.0"
edition = "2021"

[dependencies]
# PRM stuff:
pathfinding = "4.9.1"
rand = "0.8.5"
geo = "0.28.0"
rand_chacha = "0.3.1"
plotters = "0.3.6"
tokio = {version = "1.37.0", features= ["full"]}
num = "0.4.3"
# Serverless stuff:
hyper = { version = "1.2.0", features = ["http1", "client"] }
http-body-util = "0.1"
http-body = { version = "1.0.0" }
hyper-util = { version = "0.1.3", features = ["tokio"]}
bytes = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench_main"
harness = false
