[package]
name = "dynamic_prm"
version = "0.1.0"
edition = "2021"

[dependencies]
pathfinding = "4.9.1"
rand = "0.8.5"
geo = {version = "0.28.0", features = ["use-serde"]}
rand_chacha = "0.3.1"
plotters = "0.3.6"
tokio = {version = "1.37.0", features= ["full"]}
num = "0.4.3"
serde = {version = "1.0.210", features = ["derive", "rc"]}
# serde_json = "1.0.128"
bincode = "1.3"          # Add Bincode for binary serialization

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench_main"
harness = false
